k8s/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: pong-arra
  labels:
    app: pong-arra
spec:
  template:
    metadata:
      labels:
        app: pong-arra
    spec:
      containers:
        - name: pong-arra
          image: linkitgroup/pong-arra:v1
          imagePullPolicy: IfNotPresent
